--- a/app.css
+++ b/app.css
@@ -874,7 +874,7 @@
     }
   
     .hero__paragraph {
-      width: 80%;
+      /* width: 80%; */
       margin: auto
     }
   }
@@ -923,10 +923,10 @@
     bottom: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index: 0;
-    transform: scale(2);
-    transform-origin: top
+    /* transform: scale(2); */
+    /* transform-origin: top */
   }
   
   @media(min-width:992px) {
@@ -943,7 +943,7 @@
     right: 0;
     bottom: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: linear-gradient(45deg, #000, transparent);
     z-index: 1
   }
