--- a/app.css
+++ b/app.css
@@ -20,6 +20,14 @@
     --space-between-blocks-small-screens: 3rem;
   }
 
+  h3 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    opacity: .9; 
+    text-align: center;
+    width: 80%;
+  }
+
   body {
     font-family: "Poppins", sans-serif;
     color: var(--text-primary);
@@ -893,7 +901,7 @@
   
     .hero__paragraph {
       font-size: 1.2rem;
-      width: 75%
+      /* width: 90% */
     }
   }
   
