--- a/app.css
+++ b/app.css
@@ -945,7 +945,7 @@
     min-height: 100%;
     width: auto;
     height: auto;
-    transform: translate(-50%, -50%);  /* center it */
+    transform: translate(-50%, -65%);  /* center it */
     object-fit: cover;      /* preserve aspect ratio while covering */
 }
   
@@ -964,17 +964,17 @@
     bottom: 0;
     width: 100%;
     height: 100vh;
-    background: linear-gradient(45deg,
-     rgba(0, 0, 0, 0.8) 0%,
-     rgba(0, 0, 0, 0.6) 70%,
-     rgba(0, 0, 0, 0.3) 100%
+    background: radial-gradient(circle at center,
+     rgba(0, 0, 0, 0.4) 0%,
+     rgba(0, 0, 0, 0.2) 50%,
+     rgba(0, 0, 0, 0.0) 100%
     );
     z-index: 1;
   }
   
   video {
     width: 130%;
-    left: -15%
+    left: -15%;
   }
 
   /*------------------------------*/
